--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,24 +16,25 @@
                             <input type="password" placeholder="Contrase&ntilde;a" class="form-control" />
 							<div class="row">
 								<div class="col-xs-6">
-									<small style="font-size:12px;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
+									<small style="font-size:12px;border-bottom:1px dashed;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
 								</div>
-								<div class="col-xs-6 pull-right">
-									<small style="font-size:12px;" class="pull-right">
+							</div>
+							<div class="row">
+								<div class="col-xs-6">
+									<small style="font-size:12px;border-bottom:1px dashed;" class="">
 										<a href="">
 											Creaci&oacute;n de usuarios
 										</a>
 									</small>
 								</div>
 							</div>
-
                         </div>
 						<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-6">
+							<div class="col-xs-12 col-sm-12 col-md-6 pull-right">
 								<button type="submit" class="btn btn-default btn-block" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard">Iniciar sesi&oacute;n</button>
 								<br class="visible-xs visible-sm">
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6 pull-right">
+							<div class="col-xs-12 col-sm-12 col-md-6 ">
 								<button type="button" class="btn btn-default btn-block">Regresar</button>
 							</div>
 						</div>
