--- a/app/views/transactions.html
+++ b/app/views/transactions.html
@@ -251,7 +251,7 @@
 			<div class="form-group" style="margin-top: 5px;">
 				<div class="row">
 					<div class="col-sm-12 text-right">
-						<input type="button" name="name" value="Enviar" ripple="" class="ml btn btn-default btn-primary" style="background-color: #cd7c5e; border-color: #cd7c5e;">
+						<input type="button" name="name" value="Enviar" ripple="" class="ml btn btn-default btn-primary" style="background-color: #cd7c5e; border-color: #cd7c5e;" ui-sref="app.dashboard">
 					</div>
 				</div>
 			</div>
